Bug 1298886 - Convert the PinchGestureInput span fields from float to ParentLayerCoord. r=botond

MozReview-Commit-ID: 1Odp9ml6reK